# client-server

./: LICENSE  README.md
src/: CMakeLists.txt  client.cpp  serv.cpp
src/iio_client/: iio_client.cpp  iio_client.h
src/server/: server.cpp  server.h
src/server/packet/: crc32.cpp  crc32.h  packet.cpp  packet.h
